style(ui): Fix dropdown styles and alignment.

--- a/assets/child-theme-main/styles/components/_navbar.scss
+++ b/assets/child-theme-main/styles/components/_navbar.scss
@@ -166,7 +166,9 @@ $nav-breakpoint: 992px;
         }
       }
 
-      #dropdownDonateMenu {
+      ul#dropdownDonateMenu {
+        position: absolute;
+        text-align: left;
         width: 100%;
         margin: 0;
         margin-top: -1px;
@@ -177,6 +179,11 @@ $nav-breakpoint: 992px;
         background-color: variables.$white;
         flex-flow: column wrap;
 
+        li {
+          display: block;
+          width: 100%;
+        }
+
         .dropdown-item {
           display: block;
           width: 100%;
@@ -184,15 +191,12 @@ $nav-breakpoint: 992px;
           clear: both;
           font-weight: 400;
           color: #212529;
-          text-align: inherit;
           text-decoration: none;
           white-space: nowrap;
           background-color: transparent;
           border: 0;
-
           font-size: .7em;
           text-transform: none;
-          text-align: start;
           height: var(--top-navigation--height);
           line-height: var(--top-navigation--height);
           transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
